--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^17.2.0",
     "ang-jsoneditor": "^3.1.1",
     "crypto-js": "^4.2.0",
+    "marked": "^12.0.0",
+    "ngx-markdown": "^17.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
